<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch.Vertical"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout style="@style/MatchMatch.Vertical">

        <RelativeLayout style="@style/MatchMatch">


            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />


            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="onClick"
                    android:src="@mipmap/ic_launcher" />


                <android.support.design.widget.TextInputLayout style="@style/MatchWrap">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        style="@style/MatchWrap"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout style="@style/MatchWrap">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_bg"
                    android:onClick="onClick"
                    android:text="@string/action_sign_in"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                style="@style/MatchWrap.Horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp">

                <ImageView
                    android:id="@+id/login_qq"
                    style="@style/WrapWrapST"
                    android:src="@drawable/ssdk_oks_classic_qq" />

                <ImageView
                    android:id="@+id/login_wechat"
                    style="@style/WrapWrapST"
                    android:src="@drawable/ssdk_oks_classic_wechat" />

                <ImageView
                    android:id="@+id/login_sina"
                    style="@style/WrapWrapST"
                    android:src="@drawable/ssdk_oks_classic_sinaweibo" />

                <ImageView
                    android:id="@+id/login_facebook"
                    style="@style/WrapWrapST"
                    android:src="@drawable/ssdk_oks_classic_facebook" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
