<?xml version="1.0" encoding="utf-8"?>
<com.lzy.widget.PullZoomView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pzv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:tag="@string/header">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/headBackgroundImages"
                android:scaleType="centerCrop"
                android:tag="zoom"
                app:srcCompat="@mipmap/banner1" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/head"
                app:srcCompat="@mipmap/ic_launcher" />
        </RelativeLayout>

        <include layout="@layout/include_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:tag="content">

            <android.support.v7.widget.CardView
                android:id="@+id/card1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp">

                    <ImageView
                        android:id="@+id/bd"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/thumb"
                        app:srcCompat="@drawable/ic_thumb_up_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/bd"
                        android:text="@string/business_cooperation"
                        android:typeface="serif"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/chevron_right"
                        app:srcCompat="@drawable/ic_chevron_right_black_24dp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@color/bgGray" />

            <android.support.v7.widget.CardView
                android:id="@+id/card2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:foreground="?android:selectableItemBackground"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp">

                    <ImageView
                        android:id="@+id/bd2"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/thumb"
                        app:srcCompat="@drawable/ic_thumb_up_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/bd2"
                        android:text="@string/business_cooperation"
                        android:typeface="serif"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/chevron_right"
                        app:srcCompat="@drawable/ic_chevron_right_black_24dp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@color/bgGray" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp">

                    <ImageView
                        android:id="@+id/bd3"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/thumb"
                        app:srcCompat="@drawable/ic_thumb_up_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/bd3"
                        android:text="@string/business_cooperation"
                        android:typeface="serif"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/chevron_right"
                        app:srcCompat="@drawable/ic_chevron_right_black_24dp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp">

                    <ImageView
                        android:id="@+id/bd4"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/thumb"
                        app:srcCompat="@drawable/ic_thumb_up_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/bd4"
                        android:text="@string/business_cooperation"
                        android:typeface="serif"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/chevron_right"
                        app:srcCompat="@drawable/ic_chevron_right_black_24dp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp">

                    <ImageView
                        android:id="@+id/bd5"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/thumb"
                        app:srcCompat="@drawable/ic_thumb_up_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/bd5"
                        android:text="@string/business_cooperation"
                        android:typeface="serif"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/chevron_right"
                        app:srcCompat="@drawable/ic_chevron_right_black_24dp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp">

                    <ImageView
                        android:id="@+id/bd6"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/thumb"
                        app:srcCompat="@drawable/ic_thumb_up_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/bd6"
                        android:text="@string/business_cooperation"
                        android:typeface="serif"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/chevron_right"
                        app:srcCompat="@drawable/ic_chevron_right_black_24dp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>


    </LinearLayout>


</com.lzy.widget.PullZoomView>
